--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.2.10
 Django==3.0.8
+pyaes==1.6.1
+pyasn1==0.4.8
+pytest==6.0.1
+python-dotenv==0.14.0
 pytz==2020.1
+rsa==4.6
 sqlparse==0.3.1
+Telethon==1.16.0
 whitenoise==5.1.0
