--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 asgiref==3.2.10
+dj-database-url==0.5.0
+dj-email-url==1.0.1
 Django==3.0.8
 pyaes==1.6.1
 pyasn1==0.4.8
 pytest==6.0.1
+django-cache-url==3.1.2
+environs==8.0.0
+marshmallow==3.7.1
+pkg-resources==0.0.0
 python-dotenv==0.14.0
 pytz==2020.1
 rsa==4.6
